--- a/.github/workflows/weather-notification.yml
+++ b/.github/workflows/weather-notification.yml
@@ -1,25 +1,24 @@
 name: Daily Weather Notification
 
-on:
-  schedule: 
-    # 每天北京时间 20:00 执行（UTC 时间 12:00）
-    - cron: '0 12 * * *'
-  workflow_dispatch:  # 允许手动触发
+on: 
+  schedule:  
+    - cron: '0 12 * * *'  # 每天北京时间 20:00
+  workflow_dispatch: 
 
 jobs:
-  send-weather: 
+  send-weather:   
     runs-on: ubuntu-latest
     
-    steps:
-    - name: Checkout repository
+    steps: 
+    - name:  Checkout repository
       uses: actions/checkout@v4
     
     - name: Set up Python
       uses: actions/setup-python@v5
-      with:
+      with: 
         python-version: '3.10'
     
-    - name:  Install dependencies
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
@@ -31,16 +30,24 @@ jobs:
     
     - name: Run weather bot
       env:
-        QWEATHER_API_KEY: ${{ secrets.QWEATHER_API_KEY }}
-        SERVERCHAN_SENDKEY: ${{ secrets.SERVERCHAN_SENDKEY }}
-        QWEATHER_DOMAIN: ${{ secrets.QWEATHER_DOMAIN }}
+        QWEATHER_API_KEY: ${{ secrets. QWEATHER_API_KEY }}
+        SERVERCHAN_SENDKEY: ${{ secrets. SERVERCHAN_SENDKEY }}
       run: |
         python main.py
+    
+    # 新增：提交数据文件回仓库
+    - name:  Commit and push data files
+      run: |
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
+        git add weather_data.json run_record.json
+        git diff --quiet && git diff --staged --quiet || git commit -m "chore: update weather data [skip ci]"
+        git push
     
     - name: Upload logs
       if: always()
       uses: actions/upload-artifact@v4
-      with:
-        name: logs
+      with: 
+        name: logs-${{ github.run_number }}
         path: logs/
         retention-days: 7
